tests/invalid/simple/Function_CompileFail_2.whiley
void f(int x):
    print "FIRST"

void f(int x):
    print "SECOND"

void System::main([string] args):
    print "NOUT"